# StreetsOfRageRecompilation

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CPU68K.hpp  README.md  RecompilationEnvironment.cpp  RecompilationEnvironment.hpp  SoRDecompress.cpp  SoRMainMenus.cpp  SoRSound.cpp  SorCheats.cpp  SorCheats.hpp  SorManualFunctions.cpp  SorRuntime.cpp  SorRuntime.hpp  build.sh  controls.yaml  disassemble.sh  disassemble_iterative.sh  disassemble_nolabels.sh  discover_aux.sh  discover_aux_conservative.sh  discover_aux_fast.sh  discover_aux_smart.sh  main.cpp  regen_conservative.sh  regen_smart.sh  sync_ai_analysis.py
ai-analysis/: bosses.md  data-compression-and-decompression.md  enemy-ai.md  game-engine-and-levels.md  graphics-engine.md  items-and-weapons.md  player-health-lives-and-combat.md  select-screen-and-character-select.md  sound-system.md  story-mode-and-campaign-flow.md
code-analysis/: addresses.csv  aux_addresses.txt  blocks.csv  labels.csv  manual_functions.txt  speculative_addresses.txt
rom/: .gitignore
tests/: test_decompress.py  test_reach_gameplay.py
tools/: decompress.py  reach_gameplay.py
